--- a/examples/dynamic-load.html
+++ b/examples/dynamic-load.html
@@ -2,12 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Dynamic load example</title>
+		<title>Dynamic load</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
 		<link rel="stylesheet" href="./../static/app/main.css" />
 		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
 		<script src="./../static/kindeditor/kindeditor-min.js"></script>
 		<script src="./../static/kindeditor/lang/en.js"></script>
+		<script>
+			KindEditor.options.langType = 'en';
+		</script>
 	</head>
 	<body>
 		<div class="container">
@@ -36,9 +39,9 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
 
 <div class="module">
-	<h3>Dynamic load example</h3>
+	<h3>Dynamic load</h3>
 	<form>
-		<textarea name="content" style="width:800px;height:200px;"></textarea>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
 		<p>
 			<input type="button" name="load" value="Load JS and create editor" />
 			<input type="button" name="remove" value="Remove editor" />
@@ -52,9 +55,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 		$('input[name=load]').click(function() {
 			$.getScript('../static/kindeditor/kindeditor-min.js', function() {
 				KindEditor.basePath = '../static/kindeditor/';
-				KindEditor.create('textarea[name="content"]', {
-					langType : 'en'
-				});
+				KindEditor.create('textarea[name="content"]');
 			});
 		});
 		$('input[name=remove]').click(function() {
