--- a/src/demo.html
+++ b/src/demo.html
@@ -29,41 +29,39 @@
 	<ul>
 		<li><a href="examples/default">Default example</a></li>
 		<li><a href="examples/simple">Simple example</a></li>
-		<li><a href="examples/dynamic-load">Dynamic load example</li>
-		<li><a href="examples/multi-language.html" target="_blank">multi-language.html</a> (Multi-language)</li>
-		<li><a href="examples/readonly.html" target="_blank">readonly.html</a> (Readonly)</li>
-		<li><a href="examples/newline.html" target="_blank">newline.html</a> (Newline tag)</li>
-		<li><a href="examples/word-count.html" target="_blank">word-count.html</a> (Word count)</li>
-		<li><a href="examples/filter-mode.html" target="_blank">filter-mode.html</a> (Diable HTML filter)</li>
-		<li><a href="examples/url-type.html" target="_blank">url-type.html</a> (URL control)</li>
-		<li><a href="examples/paste-type.html" target="_blank">paste-type.html</a> (Paste mode)</li>
-		<li><a href="examples/auto-height.html" target="_blank">auto-height.html</a> (Auto change height)</li>
-		<li><a href="examples/custom-theme.html" target="_blank">custom-theme.html</a> (Create a theme)</li>
-		<li><a href="examples/custom-plugin.html" target="_blank">custom-plugin.html</a> (Create a plugin)</li>
+		<li><a href="examples/dynamic-load">Dynamic load</a></li>
+		<li><a href="examples/multi-language">Multi language</a></li>
+		<li><a href="examples/readonly">Readonly</a></li>
+		<li><a href="examples/newline">Newline tag</a></li>
+		<li><a href="examples/word-count">Content length</a></li>
+		<li><a href="examples/filter-mode">Disable HTML filtering</a></li>
+		<li><a href="examples/url-type">URL formatting</a></li>
+		<li><a href="examples/paste-type">Pasting mode</a></li>
+		<li><a href="examples/auto-height">Height adjustment</a></li>
+		<li><a href="examples/custom-theme">Theme customization</a></li>
+		<li><a href="examples/custom-plugin">Plugin customization</a></li>
 	</ul>
 </div>
 <div class="module">
 	<h3>With other library</h3>
 	<ul>
-		<li><a href="examples/jquery.html" target="_blank">jquery.html</a> (jQuery)</li>
-		<li><a href="examples/jquery-ui.html" target="_blank">jquery-ui.html</a> (jQuery UI)</li>
+		<li><a href="examples/jquery">With jQuery</a></li>
+		<li><a href="examples/jquery-ui">With jQuery UI</a></li>
 	</ul>
 </div>
 <div class="module">
 	<h3>Other examples</h3>
 	<ul>
-		<li><a href="examples/node.html" target="_blank">node.html</a> (Node Wrapper)</li>
-		<li><a href="examples/uploadbutton.html" target="_blank">uploadbutton.html</a> (Upload button)</li>
-		<li><a href="examples/dialog.html" target="_blank">dialog.html</a> (Dialog)</li>
-		<li><a href="examples/colorpicker.html" target="_blank">colorpicker.html</a> (Color picker)</li>
+		<li><a href="examples/node">Node API, like jQuery</a></li>
+		<li><a href="examples/uploadbutton">Upload button</a></li>
+		<li><a href="examples/dialog">Dialog</a></li>
+		<li><a href="examples/colorpicker">Color picker</a></li>
 	</ul>
 </div>
 
 <script>
 	KindEditor.ready(function(K) {
-		K.create('#editor', {
-			langType : 'en'
-		});
+		K.create('#editor');
 	});
 </script>
 {{include footer}}
