--- a/src/examples/simple.html
+++ b/src/examples/simple.html
@@ -7,7 +7,7 @@
 <div class="module">
 	<h3>Simple example</h3>
 	<form>
-		<textarea name="content" style="width:988px;height:200px;visibility:hidden;">KindEditor</textarea>
+		<textarea name="content" style="width:988px;height:200px;visibility:hidden;"></textarea>
 	</form>
 </div>
 
@@ -18,7 +18,6 @@ KindEditor.ready(function(K) {
 		resizeType : 1,
 		allowPreviewEmoticons : false,
 		allowImageUpload : false,
-		langType : 'en',
 		items : [
 			'fontname', 'fontsize', '|', 'forecolor', 'hilitecolor', 'bold', 'italic', 'underline',
 			'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
