--- a/download.html
+++ b/download.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
 		<script src="./static/kindeditor/kindeditor-min.js"></script>
 		<script src="./static/kindeditor/lang/en.js"></script>
+		<script>
+			KindEditor.options.langType = 'en';
+		</script>
 	</head>
 	<body>
 		<div class="container">
