--- a/examples/colorpicker.html
+++ b/examples/colorpicker.html
@@ -2,44 +2,85 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
+		<title>Color picker</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
-			KindEditor.ready(function(K) {
-				var colorpicker;
-				K('#colorpicker').bind('click', function(e) {
-					e.stopPropagation();
-					if (colorpicker) {
-						colorpicker.remove();
-						colorpicker = null;
-						return;
-					}
-					var colorpickerPos = K('#colorpicker').pos();
-					colorpicker = K.colorpicker({
-						x : colorpickerPos.x,
-						y : colorpickerPos.y + K('#colorpicker').height(),
-						z : 19811214,
-						selectedColor : 'default',
-						noColor : '无颜色',
-						click : function(color) {
-							K('#color').val(color);
-							colorpicker.remove();
-							colorpicker = null;
-						}
-					});
-				});
-				K(document).click(function() {
-					if (colorpicker) {
-						colorpicker.remove();
-						colorpicker = null;
-					}
-				});
-			});
+			KindEditor.options.langType = 'en';
 		</script>
 	</head>
 	<body>
-		<input type="text" id="color" value="" /> <input type="button" id="colorpicker" value="打开取色器" />
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-7116729301372758";
+google_ad_slot = "5052271949";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+
+<div class="module">
+	<h3>Color picker</h3>
+	<input type="text" id="color" value="" /> <input type="button" id="colorpicker" value="Open color picker" />
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		var colorpicker;
+		K('#colorpicker').bind('click', function(e) {
+			e.stopPropagation();
+			if (colorpicker) {
+				colorpicker.remove();
+				colorpicker = null;
+				return;
+			}
+			var colorpickerPos = K('#colorpicker').pos();
+			colorpicker = K.colorpicker({
+				x : colorpickerPos.x,
+				y : colorpickerPos.y + K('#colorpicker').height(),
+				z : 19811214,
+				selectedColor : 'default',
+				noColor : 'No color',
+				click : function(color) {
+					K('#color').val(color);
+					colorpicker.remove();
+					colorpicker = null;
+				}
+			});
+		});
+		K(document).click(function() {
+			if (colorpicker) {
+				colorpicker.remove();
+				colorpicker = null;
+			}
+		});
+	});
+</script>
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
+		</div>
 	</body>
 </html>
+
