--- a/examples/custom-plugin.html
+++ b/examples/custom-plugin.html
@@ -2,110 +2,133 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-			.ke-icon-example1 {
-				background-image: url(../themes/default/default.gif);
-				background-position: 0px -672px;
-				width: 16px;
-				height: 16px;
-			}
-			.ke-icon-example2 {
-				background-image: url(../themes/default/default.gif);
-				background-position: 0px -672px;
-				width: 16px;
-				height: 16px;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
+		<title>Plugin customization</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
-			// 自定义插件 #1
-			KindEditor.lang({
-				example1 : '插入HTML'
-			});
-			KindEditor.plugin('example1', function(K) {
-				var self = this, name = 'example1';
-				self.clickToolbar(name, function() {
-					self.insertHtml('<strong>测试内容</strong>');
-				});
-			});
-			// 自定义插件 #2
-			KindEditor.lang({
-				example2 : 'CLASS样式'
-			});
-			KindEditor.plugin('example2', function(K) {
-				var self = this, name = 'example2';
-				function click(value) {
-					var cmd = self.cmd;
-					if (value === 'adv_strikethrough') {
-						cmd.wrap('<span style="background-color:#e53333;text-decoration:line-through;"></span>');
-					} else {
-						cmd.wrap('<span class="' + value + '"></span>');
-					}
-					cmd.select();
-					self.hideMenu();
-				}
-				self.clickToolbar(name, function() {
-					var menu = self.createMenu({
-						name : name,
-						width : 150
-					});
-					menu.addItem({
-						title : '红底白字',
-						click : function() {
-							click('red');
-						}
-					});
-					menu.addItem({
-						title : '绿底白字',
-						click : function() {
-							click('green');
-						}
-					});
-					menu.addItem({
-						title : '黄底白字',
-						click : function() {
-							click('yellow');
-						}
-					});
-					menu.addItem({
-						title : '自定义删除线',
-						click : function() {
-							click('adv_strikethrough');
-						}
-					});
-				});
-			});
-			KindEditor.ready(function(K) {
-				K.create('#content1', {
-					langType : 'en',
-					cssPath : ['../plugins/code/prettify.css', 'index.css'],
-					items : ['source', 'removeformat', 'example1', 'example2', 'code']
-				});
-			});
+			KindEditor.options.langType = 'en';
 		</script>
 	</head>
 	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>自定义插件</h3>
-		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-7116729301372758";
+google_ad_slot = "5052271949";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+
+<style>
+	.ke-icon-example1 {
+		background-image: url(./../static/kindeditor/themes/default/default.png);
+		background-position: 0px -672px;
+		width: 16px;
+		height: 16px;
+	}
+	.ke-icon-example2 {
+		background-image: url(./../static/kindeditor/themes/default/default.png);
+		background-position: 0px -672px;
+		width: 16px;
+		height: 16px;
+	}
+</style>
+
+<div class="module">
+	<h3>Plugin customization</h3>
+	<textarea id="content1" name="content" style="width:988px;height:200px;visibility:hidden;"></textarea>
+</div>
+
+<script>
+	// plugin #1
+	KindEditor.lang({
+		example1 : 'Insert HTML'
+	});
+	KindEditor.plugin('example1', function(K) {
+		var self = this, name = 'example1';
+		self.clickToolbar(name, function() {
+			self.insertHtml('<strong>test content</strong>');
+		});
+	});
+	// plugin #2
+	KindEditor.lang({
+		example2 : 'CLASS style'
+	});
+	KindEditor.plugin('example2', function(K) {
+		var self = this, name = 'example2';
+		function click(value) {
+			var cmd = self.cmd;
+			if (value === 'adv_strikethrough') {
+				cmd.wrap('<span style="background-color:#e53333;text-decoration:line-through;"></span>');
+			} else {
+				cmd.wrap('<span class="' + value + '"></span>');
+			}
+			cmd.select();
+			self.hideMenu();
+		}
+		self.clickToolbar(name, function() {
+			var menu = self.createMenu({
+				name : name,
+				width : 150
+			});
+			menu.addItem({
+				title : 'red and white',
+				click : function() {
+					click('red');
+				}
+			});
+			menu.addItem({
+				title : 'green and white',
+				click : function() {
+					click('green');
+				}
+			});
+			menu.addItem({
+				title : 'yellow and white',
+				click : function() {
+					click('yellow');
+				}
+			});
+			menu.addItem({
+				title : 'my strikethrough',
+				click : function() {
+					click('adv_strikethrough');
+				}
+			});
+		});
+	});
+	KindEditor.ready(function(K) {
+		K.create('#content1', {
+			cssPath : ['./../static/kindeditor/plugins/code/prettify.css', './../static/app/editor.css'],
+			items : ['source', 'removeformat', 'example1', 'example2', 'code']
+		});
+	});
+</script>
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
+		</div>
 	</body>
 </html>
+
