--- a/examples/newline.html
+++ b/examples/newline.html
@@ -2,56 +2,76 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
+		<title>Newline tag</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
-			KindEditor.ready(function(K) {
-				var editor;
-				K('select[name=newlineTag]').change(function() {
-					if (editor) {
-						editor.remove();
-						editor = null;
-					}
-					editor = K.create('textarea[name="content"]', {
-						langType : 'en',
-						newlineTag : this.value
-					});
-				});
-				K('select[name=newlineTag]').change();
-			});
+			KindEditor.options.langType = 'en';
 		</script>
 	</head>
 	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>回车换行设置</h3>
-		<form>
-			<p>
-				<select name="newlineTag">
-					<option value="br">BR换行</option>
-					<option value="p">P换行</option>
-				</select>
-			</p>
-			<textarea name="content" style="width:800px;height:200px;"></textarea>
-		</form>
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-7116729301372758";
+google_ad_slot = "5052271949";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+
+<div class="module">
+	<h3>Newline tag</h3>
+	<form>
+		<p>
+			<select name="newlineTag">
+				<option value="br">BR newline</option>
+				<option value="p">P newline</option>
+			</select>
+		</p>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
+	</form>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		var editor;
+		K('select[name=newlineTag]').change(function() {
+			if (editor) {
+				editor.remove();
+				editor = null;
+			}
+			editor = K.create('textarea[name="content"]', {
+				newlineTag : this.value
+			});
+		});
+		K('select[name=newlineTag]').change();
+	});
+</script>
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
+		</div>
 	</body>
 </html>
+
