--- a/examples/node.html
+++ b/examples/node.html
@@ -2,46 +2,94 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<style>
-			.cls {
-				border : 1px solid #A0A0A0;
-				margin : 10px;
-				padding : 10px;
-				cursor: pointer;
-			}
-			.on {
-				border : 1px solid red;
-				background-color : #F0F0F0;
-			}
-		</style>
+		<title>Node API</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
-			KindEditor.ready(function(K) {
-				K('.cls').mouseover(function(e) {
-					K(this).addClass('on');
-				})
-				.mouseout(function(e) {
-					K(this).removeClass('on');
-				})
-				.click(function(e) {
-					eval(K.unescape(K(this).html()));
-				});
-			});
+			KindEditor.options.langType = 'en';
 		</script>
 	</head>
 	<body>
-		<div class="cls">K('div#id').addClass('cls');</div>
-		<div class="cls">K('div.class').css('margin', '10px');</div>
-		<div class="cls">K('#id img').css('border', '1px solid #000').attr('title', 'hello');</div>
-		<div class="cls">K('#id > div').width(200).height(50).css('border', '1px solid #000');</div>
-		<div class="cls">K('a[href="\\#"]').attr('href', 'http://www.kindsoft.net/');</div>
-		<div id="id">
-			<div class="class">class1</div>
-			<div class="class"><a href="#" target="_blank">class2</a></div>
-			<a href="#" target="_blank"><img src="http://www.kindsoft.net/images/logo_180_30.gif" /></a>
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-7116729301372758";
+google_ad_slot = "5052271949";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+
+<style>
+	.cls {
+		border : 1px solid #ccc;
+		margin : 10px;
+		padding : 10px;
+		cursor: pointer;
+	}
+	.on {
+		border : 1px solid red;
+		background-color : #f0f0f0;
+	}
+	#id {
+		margin: 10px;
+	}
+	#id div {
+		margin-bottom: 10px;
+	}
+</style>
+
+<div class="module">
+	<h3>Node API, like jQuery</h3>
+	<div class="cls">K('div#id').addClass('cls');</div>
+	<div class="cls">K('div.class').css('margin', '10px');</div>
+	<div class="cls">K('#id img').css('border', '1px solid #000').attr('title', 'hello');</div>
+	<div class="cls">K('#id > div').width(200).height(50).css('border', '1px solid #000');</div>
+	<div class="cls">K('a[href="\\#"]').attr('href', 'http://www.kindeditor.org/');</div>
+	<div id="id">
+		<div class="class">class1</div>
+		<div class="class"><a href="#" target="_blank">class2</a></div>
+		<a href="#" target="_blank"><img src="http://kindeditor.net/images/logo.png" /></a>
+	</div>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		K('.cls').mouseover(function(e) {
+			K(this).addClass('on');
+		})
+		.mouseout(function(e) {
+			K(this).removeClass('on');
+		})
+		.click(function(e) {
+			eval(K.unescape(K(this).html()));
+		});
+	});
+</script>
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
 		</div>
 	</body>
 </html>
+
