--- a/examples/readonly.html
+++ b/examples/readonly.html
@@ -2,54 +2,74 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
+		<title>Readonly</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
+		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/kindeditor-min.js"></script>
+		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
-			KindEditor.ready(function(K) {
-				var editor = K.create('textarea[name="content"]', {
-					langType : 'en',
-					readonlyMode : true
-				});
-				// 设置成只读状态
-				K('input[name=readonly]').click(function() {
-					editor.readonly();
-				});
-				// 取消只读状态
-				K('input[name=cancel]').click(function() {
-					editor.readonly(false);
-				});
-			});
+			KindEditor.options.langType = 'en';
 		</script>
 	</head>
 	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>只读模式</h3>
-		<form>
-			<textarea name="content" style="width:800px;height:200px;"></textarea>
-			<p>
-				<input type="button" name="readonly" value="设置成只读状态" />
-				<input type="button" name="cancel" value="取消只读状态" />
-			</p>
-		</form>
+		<div class="container">
+			<div class="header fix">
+				<ul class="fix right">
+					<li><a href="./../">Home</a></li>
+					<li class="active"><a href="./../demo">Demo</a></li>
+					<li><a href="./../download">Download</a></li>
+					<li><a href="./../documentation">Documentation</a></li>
+					<li><a href="http://kindeditor.net/">中文站</a></li>
+				</ul>
+				<h3><a href="./../">KindEditor</a></h3>
+			</div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-7116729301372758";
+google_ad_slot = "5052271949";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+
+<div class="module">
+	<h3>Readonly</h3>
+	<form>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
+		<p>
+			<input type="button" name="readonly" value="To Readonly" />
+			<input type="button" name="cancel" value="Cancel Readonly" />
+		</p>
+	</form>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		var editor = K.create('textarea[name="content"]', {
+			langType : 'en',
+			readonlyMode : true
+		});
+		// To Readonly
+		K('input[name=readonly]').click(function() {
+			editor.readonly();
+		});
+		// Cancel Readonly
+		K('input[name=cancel]').click(function() {
+			editor.readonly(false);
+		});
+	});
+</script>
+
+			<div class="footer">
+				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
+			</div>
+
+		</div>
 	</body>
 </html>
