--- a/src/examples/auto-height.html
+++ b/src/examples/auto-height.html
@@ -1,46 +1,25 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Auto Height Examples</title>
-		<style>
-			form {
-				margin: 0;
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Height adjustment</title>
+
+<div class="module">
+	<h3>Height adjustment</h3>
+	<form>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
+	</form>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		K.create('textarea[name="content"]', {
+			autoHeightMode : true,
+			afterCreate : function() {
+				this.loadPlugin('autoheight');
 			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				K.create('textarea[name="content"]', {
-					autoHeightMode : true,
-					langType : 'en',
-					afterCreate : function() {
-						this.loadPlugin('autoheight');
-					}
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>自动调整高度</h3>
-		<form>
-			<textarea name="content" style="width:800px;height:200px;"></textarea>
-		</form>
-	</body>
-</html>
+		});
+	});
+</script>
+
+{{include ../footer}}
