--- a/src/examples/custom-theme.html
+++ b/src/examples/custom-theme.html
@@ -1,47 +1,25 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Custom Theme Examples</title>
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				K.create('#content1', {
-					langType : 'en',
-					themeType : 'default'
-				});
-				K.create('#content2', {
-					langType : 'en',
-					themeType : 'simple'
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>默认风格</h3>
-		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-		<h3>简单风格</h3>
-		<textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-	</body>
-</html>
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Theme customization</title>
+
+<div class="module">
+	<h3>Default theme</h3>
+	<textarea id="content1" name="content" style="width:988px;height:200px;visibility:hidden;"></textarea>
+	<h3>Simple theme</h3>
+	<textarea id="content2" name="content" style="width:988px;height:200px;visibility:hidden;"></textarea>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		K.create('#content1', {
+			themeType : 'default'
+		});
+		K.create('#content2', {
+			themeType : 'simple'
+		});
+	});
+</script>
+
+{{include ../footer}}
