--- a/src/examples/dialog.html
+++ b/src/examples/dialog.html
@@ -1,42 +1,42 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Dialog Examples</title>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				K('#create1').click(function() {
-					var dialog = K.dialog({
-						width : 500,
-						title : '测试窗口',
-						body : '<div style="margin:10px;"><strong>内容</strong></div>',
-						closeBtn : {
-							name : '关闭',
-							click : function(e) {
-								dialog.remove();
-							}
-						},
-						yesBtn : {
-							name : '确定',
-							click : function(e) {
-								alert(this.value);
-							}
-						},
-						noBtn : {
-							name : '取消',
-							click : function(e) {
-								dialog.remove();
-							}
-						}
-					});
-				});
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Dialog</title>
+
+<div class="module">
+	<h3>Dialog</h3>
+	<input type="button" id="create1" value="Open Dialog" />
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		K('#create1').click(function() {
+			var dialog = K.dialog({
+				width : 500,
+				title : 'My Window',
+				body : '<div style="margin:10px;"><strong>dialog content</strong></div>',
+				closeBtn : {
+					name : 'Close',
+					click : function(e) {
+						dialog.remove();
+					}
+				},
+				yesBtn : {
+					name : 'Confirm',
+					click : function(e) {
+						alert(this.value);
+					}
+				},
+				noBtn : {
+					name : 'Cancel',
+					click : function(e) {
+						dialog.remove();
+					}
+				}
 			});
-		</script>
-	</head>
-	<body>
-		<input type="button" id="create1" value="打开弹出框" />
-	</body>
-</html>
+		});
+	});
+</script>
+
+{{include ../footer}}
