--- a/src/examples/jquery.html
+++ b/src/examples/jquery.html
@@ -1,42 +1,21 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>With jQuery</title>
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/jquery/jquery.min.js"></script>
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			$(function() {
-				var editor = KindEditor.create('textarea[name="content"]', {
-					langType : 'en'
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>With jQuery</h3>
-		<form>
-			<textarea name="content" style="width:800px;height:200px;"></textarea>
-		</form>
-	</body>
-</html>
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>With jQuery</title>
+
+<div class="module">
+	<h3>With jQuery</h3>
+	<form>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
+	</form>
+</body>
+
+<script src="{{appUrl}}/static/jquery/jquery.min.js"></script>
+<script>
+	$(function() {
+		KindEditor.create('textarea[name="content"]');
+	});
+</script>
+
+{{include ../footer}}
