--- a/src/examples/readonly.html
+++ b/src/examples/readonly.html
@@ -1,55 +1,35 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Readonly Examples</title>
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				var editor = K.create('textarea[name="content"]', {
-					langType : 'en',
-					readonlyMode : true
-				});
-				// 设置成只读状态
-				K('input[name=readonly]').click(function() {
-					editor.readonly();
-				});
-				// 取消只读状态
-				K('input[name=cancel]').click(function() {
-					editor.readonly(false);
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>只读模式</h3>
-		<form>
-			<textarea name="content" style="width:800px;height:200px;"></textarea>
-			<p>
-				<input type="button" name="readonly" value="设置成只读状态" />
-				<input type="button" name="cancel" value="取消只读状态" />
-			</p>
-		</form>
-	</body>
-</html>
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Readonly</title>
+
+<div class="module">
+	<h3>Readonly</h3>
+	<form>
+		<textarea name="content" style="width:988px;height:200px;"></textarea>
+		<p>
+			<input type="button" name="readonly" value="To Readonly" />
+			<input type="button" name="cancel" value="Cancel Readonly" />
+		</p>
+	</form>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		var editor = K.create('textarea[name="content"]', {
+			langType : 'en',
+			readonlyMode : true
+		});
+		// To Readonly
+		K('input[name=readonly]').click(function() {
+			editor.readonly();
+		});
+		// Cancel Readonly
+		K('input[name=cancel]').click(function() {
+			editor.readonly(false);
+		});
+	});
+</script>
+
+{{include ../footer}}
