--- a/src/examples/uploadbutton.html
+++ b/src/examples/uploadbutton.html
@@ -1,38 +1,38 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Upload Button Examples</title>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				var uploadbutton = K.uploadbutton({
-					button : K('#uploadButton')[0],
-					fieldName : 'imgFile',
-					url : '../php/upload_json.php?dir=file',
-					afterUpload : function(data) {
-						if (data.error === 0) {
-							var url = K.formatUrl(data.url, 'absolute');
-							K('#url').val(url);
-						} else {
-							alert(data.message);
-						}
-					},
-					afterError : function(str) {
-						alert('自定义错误信息: ' + str);
-					}
-				});
-				uploadbutton.fileBox.change(function(e) {
-					uploadbutton.submit();
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<div class="upload">
-			<input class="ke-input-text" type="text" id="url" value="" readonly="readonly" /> <input type="button" id="uploadButton" value="Upload" />
-		</div>
-	</body>
-</html>
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>Upload button</title>
+
+<div class="module">
+	<h3>Upload button</h3>
+	<div class="upload">
+		<input class="ke-input-text" type="text" id="url" value="" readonly="readonly" /> <input type="button" id="uploadButton" value="Upload" />
+	</div>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		var uploadbutton = K.uploadbutton({
+			button : K('#uploadButton')[0],
+			fieldName : 'imgFile',
+			url : '/path/to/php/upload_json.php?dir=file',
+			afterUpload : function(data) {
+				if (data.error === 0) {
+					var url = K.formatUrl(data.url, 'absolute');
+					K('#url').val(url);
+				} else {
+					alert(data.message);
+				}
+			},
+			afterError : function(str) {
+				alert('error message: ' + str);
+			}
+		});
+		uploadbutton.fileBox.change(function(e) {
+			uploadbutton.submit();
+		});
+	});
+</script>
+
+{{include ../footer}}
