--- a/src/examples/url-type.html
+++ b/src/examples/url-type.html
@@ -1,68 +1,39 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>URL Type Examples</title>
-		<style>
-			form {
-				margin: 0;
-			}
-			textarea {
-				display: block;
-			}
-		</style>
-		<link rel="stylesheet" href="../static/kindeditor/themes/default/default.css" />
-		<script src="../static/kindeditor/kindeditor.js"></script>
-		<script src="../static/kindeditor/lang/en.js"></script>
-		<script>
-			KindEditor.ready(function(K) {
-				K.create('#content1', {
-					langType : 'en',
-					urlType : 'relative'
-				});
-				K.create('#content2', {
-					langType : 'en',
-					urlType : 'absolute'
-				});
-				K.create('#content3', {
-					langType : 'en',
-					urlType : 'domain'
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-7116729301372758";
-		/* 更多演示（728x90） */
-		google_ad_slot = "5052271949";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
-		<h3>相对URL</h3>
-		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
-外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
-内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
-外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
+{{include ../header}}
+
+{{include google-ad}}
+
+<title>URL formatting</title>
+
+<div class="module">
+	<h3>Relative URL</h3>
+	<textarea id="content1" name="content" style="width:988px;height:200px;visibility:hidden;">
+Inner URL: <a href="./default" target="_blank">Click here</a><br />
+Outer URL: <a href="http://www.google.com/" target="_blank">Click here</a><br />
 </textarea>
-		<h3>绝对URL</h3>
-		<textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
-外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
-内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
-外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
+	<h3>Absolute URL</h3>
+	<textarea id="content2" name="content" style="width:988px;height:200px;visibility:hidden;">
+Inner URL: <a href="./default" target="_blank">Click here</a><br />
+Outer URL: <a href="http://www.google.com/" target="_blank">Click here</a><br />
 </textarea>
-		<h3>绝对URL（包含域名）</h3>
-		<textarea id="content3" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
-外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
-内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
-外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
+	<h3>Absolute URL (Includes domain)</h3>
+	<textarea id="content3" name="content" style="width:988px;height:200px;visibility:hidden;">
+Inner URL: <a href="./default" target="_blank">Click here</a><br />
+Outer URL: <a href="http://www.google.com/" target="_blank">Click here</a><br />
 </textarea>
-	</body>
-</html>
+</div>
+
+<script>
+	KindEditor.ready(function(K) {
+		K.create('#content1', {
+			urlType : 'relative'
+		});
+		K.create('#content2', {
+			urlType : 'absolute'
+		});
+		K.create('#content3', {
+			urlType : 'domain'
+		});
+	});
+</script>
+
+{{include ../footer}}
