--- a/src/header.inc.html
+++ b/src/header.inc.html
@@ -5,7 +5,9 @@
 		<title>{{pageTitle}}</title>
 		<link rel="shortcut icon" type="image/x-icon" href="{{appUrl}}/static/app/favicon.ico" />
 		<link rel="stylesheet" href="{{appUrl}}/static/app/main.css" />
+		<link rel="stylesheet" href="{{appUrl}}/static/kindeditor/plugins/code/prettify.css" />
 		<link rel="stylesheet" href="{{appUrl}}/static/kindeditor/themes/default/default.css" />
+		<script src="{{appUrl}}/static/kindeditor/plugins/code/prettify.js"></script>
 		<script src="{{appUrl}}/static/kindeditor/kindeditor-min.js"></script>
 		<script src="{{appUrl}}/static/kindeditor/lang/en.js"></script>
 		<script>
