--- a/documentation.html
+++ b/documentation.html
@@ -1,8 +1,8 @@
-<p><!doctype html>
+<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>KindEditor - WYSIWYG HTML editor</title>
+		<title> KindEditor - WYSIWYG HTML editor</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./static/app/favicon.ico" />
 		<link rel="stylesheet" href="./static/app/main.css" />
 		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
@@ -23,8 +23,7 @@
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
-			</div></p>
-
+			</div><div class="md-content">
 <h2 id="installation">Installation</h2>
 
 <ol>
@@ -65,12 +64,10 @@ html = $('#editor_id').val(); // jQuery API
 editor.html('HTML code');
 </code></p></li>
 </ol>
-
-<p>			<div class="footer">
+</div>			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
 
 		</div>
 	</body>
 </html>
-</p>
