--- a/download.html
+++ b/download.html
@@ -1,8 +1,8 @@
-<p><!doctype html>
+<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>KindEditor - WYSIWYG HTML editor</title>
+		<title> KindEditor - WYSIWYG HTML editor</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./static/app/favicon.ico" />
 		<link rel="stylesheet" href="./static/app/main.css" />
 		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
@@ -23,17 +23,14 @@
 					<li><a href="http://kindeditor.net/">中文站</a></li>
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
-			</div></p>
+			</div><div class="md-content">
+<h2 id="download">Download</h2>
 
-<h2 id="downloads">Downloads</h2>
-
-<p>http://code.google.com/p/kindeditor/downloads/list</p>
-
-<p>			<div class="footer">
+<p><a href="http://kindeditor.googlecode.com/files/kindeditor-4.1.10.zip">KindEditor 4.1.10 (2013-11-23)</a></p>
+</div>			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
 
 		</div>
 	</body>
 </html>
-</p>
