--- a/examples/multi-language.html
+++ b/examples/multi-language.html
@@ -5,11 +5,16 @@
 		<title>Multi Language</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../static/app/favicon.ico" />
 		<link rel="stylesheet" href="./../static/app/main.css" />
+		<link rel="stylesheet" href="./../static/kindeditor/plugins/code/prettify.css" />
 		<link rel="stylesheet" href="./../static/kindeditor/themes/default/default.css" />
+		<script src="./../static/kindeditor/plugins/code/prettify.js"></script>
 		<script src="./../static/kindeditor/kindeditor-min.js"></script>
 		<script src="./../static/kindeditor/lang/en.js"></script>
 		<script>
 			KindEditor.options.langType = 'en';
+			KindEditor.ready(function() {
+				prettyPrint();
+			});
 		</script>
 	</head>
 	<body>
@@ -25,15 +30,13 @@
 				<h3><a href="./../">KindEditor</a></h3>
 			</div>
 
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-7116729301372758";
-google_ad_slot = "5052271949";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-7116729301372758"
+     data-ad-slot="5052271949"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
 
