--- a/documentation.html
+++ b/documentation.html
@@ -5,11 +5,16 @@
 		<title> KindEditor - WYSIWYG HTML editor</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./static/app/favicon.ico" />
 		<link rel="stylesheet" href="./static/app/main.css" />
+		<link rel="stylesheet" href="./static/kindeditor/plugins/code/prettify.css" />
 		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
+		<script src="./static/kindeditor/plugins/code/prettify.js"></script>
 		<script src="./static/kindeditor/kindeditor-min.js"></script>
 		<script src="./static/kindeditor/lang/en.js"></script>
 		<script>
 			KindEditor.options.langType = 'en';
+			KindEditor.ready(function() {
+				prettyPrint();
+			});
 		</script>
 	</head>
 	<body>
@@ -24,46 +29,38 @@
 				</ul>
 				<h3><a href="./">KindEditor</a></h3>
 			</div><div class="md-content">
-<h2 id="installation">Installation</h2>
-
-<ol>
-<li><p>Download the latest version of the editor.</p></li>
-<li><p>Extract the downloaded archive to a directory called kindeditor in the root of your website.</p></li>
-<li><p>Insert the following code fragment into your page.</p>
-
-<p>```html
-<link href="/kindeditor/themes/default/default.css" rel="stylesheet" /></p>
-
-<script charset="utf-8" src="/kindeditor/kindeditor-min.js"></script>
-<script charset="utf-8" src="/kindeditor/lang/en.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-7116729301372758"
+     data-ad-slot="6563401767"></ins>
 <script>
-    KindEditor.ready(function(K) {
-        window.editor = K.create('#editor_id', {
-            langType : 'en'
-        });
-    });
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-<p><textarea id="editor_id" name="content" cols="100" rows="8"></textarea>
-```</p></li>
-<li><p>Fetch HTML data.</p>
+<h3 id="documentation">Documentation</h3>
 
-<p><code>javascript
-html = editor.html();
-</code></p></li>
-<li><p>Synchronize HTML data to the textarea
-```javascript
-editor.sync();</p>
-
-<p>html = document.getElementById('editor<em>id').value; // Native API
-html = K('#editor</em>id').val(); // KindEditor Node API
-html = $('#editor_id').val(); // jQuery API
-```</p></li>
-<li><p>Set HTML data to KindEditor
-<code>javascript
-editor.html('HTML code');
-</code></p></li>
-</ol>
+<ul>
+<li>Installation</li>
+<li>Configuration</li>
+<li>Theme customization</li>
+<li>Plugin customization</li>
+<li>Upload file</li>
+<li>Base API</li>
+<li>Event API</li>
+<li>Selector API</li>
+<li>Node API</li>
+<li>Range API</li>
+<li>Command API</li>
+<li>Ajax API</li>
+<li>Widget API</li>
+<li>Menu API</li>
+<li>ColorPicker API</li>
+<li>Dialog API</li>
+<li>Tabs API</li>
+<li>UploadButton API</li>
+<li>Editor API</li>
+</ul>
 </div>			<div class="footer">
 				<p><a href="http://kindsoft.net/">Copyright 2013 kindsoft.net</a></p>
 			</div>
