--- a/src/demo.html
+++ b/src/demo.html
@@ -3,17 +3,14 @@
 <title>KindEditor - WYSIWYG HTML editor</title>
 
 <div class="module">
-	<script type="text/javascript"><!--
-	google_ad_client = "ca-pub-7116729301372758";
-	/* 演示页 */
-	google_ad_slot = "8255125061";
-	google_ad_width = 728;
-	google_ad_height = 90;
-	//-->
-	</script>
-	<script type="text/javascript"
-	src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-	</script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-7116729301372758"
+     data-ad-slot="8255125061"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 
 <div class="demo">
