--- a/download.html
+++ b/download.html
@@ -8,10 +8,8 @@
 		<link rel="stylesheet" href="./static/kindeditor/plugins/code/prettify.css" />
 		<link rel="stylesheet" href="./static/kindeditor/themes/default/default.css" />
 		<script src="./static/kindeditor/plugins/code/prettify.js"></script>
-		<script src="./static/kindeditor/kindeditor-min.js"></script>
-		<script src="./static/kindeditor/lang/en.js"></script>
+		<script src="./static/kindeditor/kindeditor-all-min.js"></script>
 		<script>
-			KindEditor.options.langType = 'en';
 			KindEditor.ready(function() {
 				prettyPrint();
 			});
@@ -41,7 +39,7 @@
 <h3 id="production">Production</h3>
 
 <ul>
-<li><a href="http://kindeditor.googlecode.com/files/kindeditor-4.1.10.zip">Download KindEditor 4.1.10 (2013-11-23)</a></li>
+<li><a href="dist/kindeditor-4.1.10-en.zip">Download KindEditor 4.1.10 (2013-12-22)</a></li>
 </ul>
 
 <h3 id="development">Development</h3>
