--- a/test/remote.html
+++ b/test/remote.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor Test</title>
-		<script src="http://www.kindsoft.net/ke4/kindeditor-min.js"></script>
+		<script src="http://www.kindsoft.net/ke4/kindeditor-all-min.js"></script>
 		<script>
 			//document.domain = 'domain.com';
 			KindEditor.basePath = 'http://domain.com/kindeditor/trunk/';
