Update test files

--- a/test/node.html
+++ b/test/node.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<script src="../lib/jquery.js"></script>
+		<script src="../lib/jquery.min.js"></script>
 		<!-- include src files -->
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
@@ -55,8 +55,8 @@ g			<embed/> </div>
 			<div> </div>
 		</div>
 		<!-- include test files -->
-	
+
 		<script src="node.js"></script>
-	
+
 	</body>
 </html>
