--- a/test/edit.html
+++ b/test/edit.html
@@ -17,7 +17,7 @@
 		</style>
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<script src="../lib/jquery.js"></script>
+		<script src="../lib/jquery.min.js"></script>
 		<!-- include src files -->
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
