--- a/test/selector.html
+++ b/test/selector.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<script src="../lib/jquery.js"></script>
+		<script src="../lib/jquery.min.js"></script>
 		<!-- include src files -->
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
