--- a/test/widget.html
+++ b/test/widget.html
@@ -18,7 +18,7 @@
 		</style>
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
-		<script src="../lib/jquery.js"></script>
+		<script src="../lib/jquery.min.js"></script>
 		<link rel="stylesheet" href="../themes/default/default.css" />
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
