--- a/documentation.html
+++ b/documentation.html
@@ -39,8 +39,8 @@
 <h3 id="documentation">Documentation</h3>
 
 <ul>
-<li>Installation</li>
-<li>Configuration</li>
+<li><a href="docs/install">Installation</a></li>
+<li><a href="docs/config">Configuration</a></li>
 <li>Theme customization</li>
 <li>Plugin customization</li>
 <li>Upload file</li>
