rename  zh_CN -> zh-CN, zh_TW -> zh-TW

--- a/test/dialog.html
+++ b/test/dialog.html
@@ -21,7 +21,7 @@
 		<script src="../src/toolbar.js"></script>
 		<script src="../src/dialog.js"></script>
 		<script src="../src/main.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 	</head>
 	<body>
 		<h1>KindEditor Dialog Test</h1>
