--- a/test/hidden.html
+++ b/test/hidden.html
@@ -30,7 +30,7 @@
 		<script src="../src/tabs.js"></script>
 		<script src="../src/ajax.js"></script>
 		<script src="../src/main.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 		<script>
 			KindEditor.ready(function(K) {
 				K.create('textarea', {
