--- a/test/main.html
+++ b/test/main.html
@@ -35,7 +35,7 @@
 		<script src="../src/tabs.js"></script>
 		<script src="../src/ajax.js"></script>
 		<script src="../src/main.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 		<script src="../lang/en.js"></script>
 		<script src="../plugins/emoticons/emoticons.js"></script>
 		<script src="../plugins/flash/flash.js"></script>
