--- a/test/menu.html
+++ b/test/menu.html
@@ -21,7 +21,7 @@
 		<script src="../src/menu.js"></script>
 		<script src="../src/colorpicker.js"></script>
 		<script src="../src/main.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 	</head>
 	<body>
 		<h1>KindEditor Menu Test</h1>
