--- a/test/quirkmode.html
+++ b/test/quirkmode.html
@@ -10,7 +10,7 @@
 		<textarea name="editor1" cols="100" rows="20" style="width:800px;height:200px;"></textarea>
 		<br />
 		<script src="../kindeditor.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 		<script src="../lang/en.js"></script>
 		<script>
 			KindEditor.ready(function(K) {
