--- a/test/total.html
+++ b/test/total.html
@@ -32,7 +32,7 @@
 			KindEditor.ready(function(K) {
 				window.editor = K.create('textarea', {
 					allowFileManager : true,
-					langType : 'en',
+					langType : 'zh-CN',
 					autoHeightMode : true
 				});
 				K('#removeAll').click(function(e) {
