--- a/test/editor.html
+++ b/test/editor.html
@@ -26,7 +26,7 @@
 		<script src="../src/dialog.js"></script>
 		<script src="../src/tabs.js"></script>
 		<script src="../src/main.js"></script>
-		<script src="../lang/zh_CN.js"></script>
+		<script src="../lang/zh-CN.js"></script>
 		<script src="../lang/en.js"></script>
 		<script src="../plugins/emoticons/emoticons.js"></script>
 		<script src="../plugins/flash/flash.js"></script>
